@@ -1,0 +1,16 @@
+<project name="Swfmill Ant Task - Samples" default="sample" basedir=".">
+
+  <taskdef name="swfsli" classname="org.as2lib.ant.Swfsli" classpath="../../as2ant.jar"/>
+  <taskdef name="mtasc" classname="org.as2lib.ant.Mtasc" classpath="../../as2ant.jar"/>
+
+  <property name="swf.file.1" location="sample1.swf"/>
+  <property name="swf.file.2" location="sample2.swf"/>
+
+  <target name="sample" description="compiles two sample files: with default and enlarged limits">
+    <mtasc src="src/Main.as" header="400:300:20" swf="${swf.file.1}" main="true"/>
+    <mtasc src="src/Main.as" header="400:300:20" swf="${swf.file.2}" main="true"/>
+    <swfsli swf="${swf.file.2}" timeout="5000"/>
+  </target>
+
+
+</project>
